--- a/styles/styles.css
+++ b/styles/styles.css
@@ -101,6 +101,14 @@ section {
     transform: translateY(-50%);
 }
 
+.nic{
+    margin-bottom: 10px;
+    margin-left: 5px;
+    padding: 10px;
+    background-color: #000;
+    cursor: pointer;
+}
+
 .controls .control {
     padding: 1rem;
     cursor: pointer;
@@ -1077,4 +1085,65 @@ section {
         font-size: 4rem;
     }
 }
+/* ------------ */
 
+.popup {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+
+
+.popup .popuptext {
+    visibility: hidden;
+    width: 550px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 100px 20px;
+    position: absolute;
+    z-index: 100;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -450px;
+}
+
+
+.popup .popuptext::after {
+    position: absolute;
+    top: 100%;
+    left: 100%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+}
+
+
+.popup .show {
+    visibility: visible;
+    -webkit-animation: fadeIn 1s;
+    animation: fadeIn 1s
+}
+
+
+@-webkit-keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
