--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1091,6 +1091,7 @@ section {
     position: relative;
     display: inline-block;
     cursor: pointer;
+    
 }
 
 
@@ -1103,10 +1104,11 @@ section {
     border-radius: 6px;
     padding: 100px 20px;
     position: absolute;
-    z-index: 100;
+    
     bottom: 125%;
     left: 50%;
-    margin-left: -450px;
+    margin-left: -400px;
+    text-align: justify;
 }
 
 
@@ -1146,4 +1148,8 @@ section {
     to {
         opacity: 1;
     }
+}
+.pleft{
+    padding-left: 10px;
+    
 }
